# MIOT-ANIOT

./: compose-dev.yaml  idf-py.alias.sh  idf-py.sh
idle/: CMakeLists.txt
idle/main/: CMakeLists.txt  idle.c
p_2/: q&a.txt
p_2/e_1/: CMakeLists.txt  q&a.txt
p_2/e_1/main/: CMakeLists.txt  main.c
p_2/e_2/: CMakeLists.txt
p_2/e_2/main/: main.c
p_2/e_3/main/: CMakeLists.txt  main.c
p_2/e_4/: CMakeLists.txt
p_2/e_4/main/: main.c
p_2/e_5/main/: CMakeLists.txt  app_events.h  fifo_queue.c  hall_sampling.c  hall_sampling.h  hall_sensor.c  logger.c  logger.h  main.c  monitor.c  task_monitor.c  task_monitor.h
p_3/: q&a.txt
p_3/e_2/main/: main.c
p_3/e_4/main/: CMakeLists.txt  main.c
p_3/e_5/main/: main.c
p_4/: q&a.txt
p_4/e_1/main/: Kconfig.projbuild  main.c
p_4/e_2/components/distance_sensor/: CMakeLists.txt  Kconfig.projbuild  distance_sensor.c  distance_sensor_events.c  distance_sensor_reading.c
p_4/e_2/components/distance_sensor/include/: distance_sensor.h  distance_sensor_events.h  distance_sensor_reading.h
p_4/e_2/components/distance_sensor/include/util/: adc.h  adc1.h  adc2.h  multisampling.h  storage.h
p_4/e_2/components/distance_sensor/util/: adc.c  adc1.c  adc2.c  multisampling.c  readings.c  sampling.c  sampling_timer.c  storage.c
p_4/e_2/main/: CMakeLists.txt  main.c
p_4/e_3/main/: CMakeLists.txt  Kconfig.projbuild  binary_counter_3b_task.c  distance_sensor_task.c  hall_sensor_task.c  main.c
p_5/: q&a.txt
p_5/e_1/main/: CMakeLists.txt  Kconfig.projbuild  cmd_i2ctools.c  cmd_i2ctools.h
p_5/e_2/main/: CMakeLists.txt
(+51 files in other folders)
