idf_component_register(
    SRCS
        distance_sensor.c
        distance_sensor_events.c
        distance_sensor_reading.c
        util/adc1.c
        util/adc2.c
        util/sampling_timer.c
        util/multisampling.c
        util/storage.c
    INCLUDE_DIRS
        include
    REQUIRES
        esp_adc_cal
)
